[package]
name = "mtiny-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mtiny-http = { path = "../mtiny-http", version = "0.1.0" }
mtiny-service = { path = "../mtiny-service", version = "0.1.0", features = [
    "util",
] }

mime = "0.3"
