[package]
name = "mtiny-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mtiny-core = { path = "../mtiny-core", version = "0.1.0" }

futures-core = "0.3"
pin-project-lite = "0.2"

[features]
default = []
core = []